initial database has been updated and the registration part is partially completed.

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
-DATABASE_URL=postgresql+psycopg2://postgres:postgres@localhost:5432/healthsync
-JWT_SECRET=change_me
+DATABASE_URL=postgresql+psycopg2://postgres:1234@localhost:5432/hospital_db
+JWT_SECRET=supersecretkey
 JWT_ALG=HS256
 JWT_EXPIRE_MIN=60
 CORS_ORIGINS=http://localhost:5173
