--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql+psycopg2://postgres:1234@localhost:5432/hospital_db
+DATABASE_URL=postgresql+psycopg2://postgres:123456@localhost:5432/hospitalmanagement
 JWT_SECRET=supersecretkey
 JWT_ALG=HS256
 JWT_EXPIRE_MIN=60
